--- a/HealthPerLevel-cs.csproj
+++ b/HealthPerLevel-cs.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SPTarkov.Common" Version="4.0.7" />
+    <PackageReference Include="SPTarkov.DI" Version="4.0.7" />
+    <PackageReference Include="SPTarkov.Server.Core" Version="4.0.7" />
+  </ItemGroup>
+
 </Project>
