--- a/HealthPerLevel-cs.csproj
+++ b/HealthPerLevel-cs.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="SPTarkov.Server.Core" Version="4.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="config\config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
