--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,9 @@
     "levels_per_increment": 5,
     "level_cap": false,
     "level_cap_value": 30,
+    "health_skill_levels_per_increment": 1,
+    "level_health_skill_cap": false,
+    "level_health_skill_cap_value": 25,
 
     "base_health": {
       "thorax_base_health": 85,
@@ -22,12 +25,25 @@
       "right_arm_per_level": 3,
       "left_leg_per_level": 3,
       "right_leg_per_level": 3
+    },
+    "health_per_health_skill_level": true,
+    "increase_per_health_skill_level": {
+      "thorax_health_per_level": 1,
+      "stomach_health_per_level": 1,
+      "head_health_per_level": 1,
+      "left_arm_per_level": 1,
+      "right_arm_per_level": 1,
+      "left_leg_per_level": 1,
+      "right_leg_per_level": 1
     }
   },
   "SCAV": {
     "levels_per_increment": 5,
     "level_cap": false,
     "level_cap_value": 20,
+    "health_skill_levels_per_increment": 1,
+    "level_health_skill_cap": false,
+    "level_health_skill_cap_value": 25,
 
     "base_health": {
       "thorax_base_health": 85,
@@ -46,6 +62,16 @@
       "right_arm_per_level": 3,
       "left_leg_per_level": 3,
       "right_leg_per_level": 3
+    },
+    "health_per_health_skill_level": true,
+    "increase_per_health_skill_level": {
+      "thorax_health_per_level": 1,
+      "stomach_health_per_level": 1,
+      "head_health_per_level": 1,
+      "left_arm_per_level": 1,
+      "right_arm_per_level": 1,
+      "left_leg_per_level": 1,
+      "right_leg_per_level": 1
     }
   }
 }
