adds output settings

--- a/HealthPerLevel-cs.csproj
+++ b/HealthPerLevel-cs.csproj
@@ -5,6 +5,8 @@
     <RootNamespace>HealthPerLevel_cs</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <OutputPath>bin\$(Configuration)\$(ProjectName)\SPT\user\mods\fryciarz7-$(AssemblyName)\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
