extensive error logging

--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,7 @@
 ﻿{
   "enabled": true,
+  "resotreDefaults": false,
+  "debug": true,
   "PMC": {
     "levels_per_increment": 5,
     "level_cap": false,
